plugins {
    id "architectury-plugin" version "3.4-SNAPSHOT"
    id "dev.architectury.loom" version "1.6-SNAPSHOT" apply false
    id "com.github.johnrengelman.shadow" version "8.+" apply false
    id "com.hypherionmc.modutils.modpublisher" version "2.+"
    id "io.github.pacifistmc.forgix" version "1.+"
}

architectury {
    minecraft = rootProject.minecraft_version
}

subprojects {
    apply plugin: "dev.architectury.loom"
    apply plugin: "com.github.johnrengelman.shadow"

    dependencies {
        minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
        mappings loom.layered {
            mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
            mappings "dev.architectury:yarn-mappings-patch-neoforge:${project.yarn_patch}"
        }
    }
}

allprojects {
    apply plugin: "java"
    apply plugin: "architectury-plugin"
    apply plugin: "maven-publish"

    archivesBaseName = rootProject.archives_base_name
    version = "${rootProject.mod_version}+mc${rootProject.minecraft_version}"
    group = rootProject.maven_group

    repositories {
    }

    tasks.withType(JavaCompile) {
        options.encoding = "UTF-8"
        options.release = 21
    }

    java {
        withSourcesJar()
    }
}

forgix {
    group = rootProject.maven_group
    mergedJarName = "${rootProject.archives_base_name}-${rootProject.version}.jar"
    outputDir = "build/libs/forgix"

    fabric {
        projectName = "fabric"
        jarLocation = "build/libs/${rootProject.archives_base_name}-fabric-${rootProject.version}.jar"
    }

    neoforge {
        projectName = "neoforge"
        jarLocation = "build/libs/${rootProject.archives_base_name}-neoforge-${ rootProject.version }.jar"
    }
}

publisher {
    apiKeys {
        curseforge(System.getenv("CURSEFORGE_TOKEN"))
        modrinth(System.getenv("MODRINTH_TOKEN"))
    }

    curseID = rootProject.curseforge_id
    modrinthID = rootProject.modrinth_id
    versionType = "release"
    changelog = file("CHANGELOG.md").getText('UTF-8')
    version = "$rootProject.version"
    displayName = "VM Translation Update 1.20.5 - 1.20.6 $rootProject.version"
    gameVersions = ["1.20.5", "1.20.6"]
    curseEnvironment = "client"
    loaders = ["fabric", "neoforge"]
    artifact = forgix.getOutputDir() + "/" + forgix.getMergedJarName()

    modrinthDepends {
        required "cloth-config"
    }

    curseDepends {
        required "cloth-config"
    }
}

publishMod.dependsOn(mergeJars)
